# pyFMST

./: .gitignore  README.md  fmstworkflow.ipynb  main.py  pyproject.toml  setup.py
examples/1/: example1.ipynb  frechet.out  gridc.vtx  picks.json  raypath.out  response.xml  rtravel.out  station_pairs.csv  subinvss.in
examples/1/FMST/: frechet.out  gridc.vtx  raypath.out  rtravel.out  subinvss.in
examples/1/FMST/gmtplot/: bound.gmt
examples/1/FMST/mkmodel/: grid2d.vtx  grid2dss.in
fmstUtils/: __init__.py  fmstUtils.py  genUtils.py
pyFMST/: __init__.py  main.py
pyFMST/fmstUtils/: __init__.py  fmstUtils.py  genUtils.py
templates/: fm2dss.in  grid2dss.in  subinvss.in  synthtss.in  tslicess.in
