[build-system]
requires	= ["setuptools", "wheel"]
build-backend	= "setuptools.build_meta"

[project]
name		= "pyFMST"
version		= "0.1.1"
description	= "Python wrapper for FMST"
readme		= "README.md"
license = { text = "GPL-3.0-or-later" }
authors		= [{ name = "Will Pizii" }]
dependencies	= [ "pygmt", "matplotlib", "numpy", "pandas", "obspy", "tqdm" ]
